# mikan

./: README.md
common/: Cargo.toml
common/src/: lib.rs
font/: .gitignore  Cargo.toml  build.rs
font/src/: lib.rs
kernel/: Cargo.toml  Makefile
kernel/.cargo/: config
kernel/src/: console.rs  font.rs  graphics.rs  main.rs  mouse.rs
loader/: Cargo.toml  Makefile
loader/src/: main.rs
