[package]
name = "loader"
version = "0.1.0"
authors = ["morimolymoly <morimolymoly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git" }